; ModuleID = '/home/carl/AnghaBench/How-to-Make-a-Computer-Operating-System/src/sdk/src/libc/src/stdlib/extr_qsort.c_qsort.c'
source_filename = "/home/carl/AnghaBench/How-to-Make-a-Computer-Operating-System/src/sdk/src/libc/src/stdlib/extr_qsort.c_qsort.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @qsort(i8* %0, i64 %1, i64 %2, i32 (i8*, i8*)* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32 (i8*, i8*)*, align 8
  store i8* %0, i8** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  store i32 (i8*, i8*)* %3, i32 (i8*, i8*)** %8, align 8
  %9 = load i64, i64* %6, align 8
  %10 = icmp uge i64 %9, 9223372036854775807
  br i1 %10, label %14, label %11

11:                                               ; preds = %4
  %12 = load i64, i64* %7, align 8
  %13 = icmp uge i64 %12, 9223372036854775807
  br i1 %13, label %14, label %15

14:                                               ; preds = %11, %4
  br label %25

15:                                               ; preds = %11
  %16 = load i64, i64* %6, align 8
  %17 = icmp ugt i64 %16, 1
  br i1 %17, label %18, label %25

18:                                               ; preds = %15
  %19 = load i8*, i8** %5, align 8
  %20 = load i64, i64* %7, align 8
  %21 = load i64, i64* %6, align 8
  %22 = sub i64 %21, 1
  %23 = load i32 (i8*, i8*)*, i32 (i8*, i8*)** %8, align 8
  %24 = call i32 @quicksort(i8* %19, i64 %20, i32 0, i64 %22, i32 (i8*, i8*)* %23)
  br label %25

25:                                               ; preds = %14, %18, %15
  ret void
}

declare dso_local i32 @quicksort(i8*, i64, i32, i64, i32 (i8*, i8*)*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
